# libfx2mirisdr

./: CMakeLists.txt  Doxyfile.in  configure.ac  libfx2mirisdr.pc.in
include/: CMakeLists.txt  Makefile.am  fx2mirisdr.h  fx2mirisdr_export.h  fx2mirisdr_reg.h
src/: CMakeLists.txt  Makefile.am  fx2miri_sdr.c  libfx2mirisdr.c  tuner_msi001.c
